resolves date picker cutoff screen bug on large screens

--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,6 @@
   border-top-left-radius: 2%;
   border-top-right-radius: 2%;
   margin-top: 2%;
-  overflow: auto;
 }
 
 .App {
